--- a/styles/shared/_forms.scss
+++ b/styles/shared/_forms.scss
@@ -80,7 +80,7 @@ input[type=checkbox]
 ** for more details.
 */
 $button-border-width: 0.1rem;
-$button-line-height: $body-text-line-height - 2 * $button-border-width;
+$button-line-height: $secondary-text-size + 0.2rem;
 $button-vertical-padding: ($body-text-line-height - $button-line-height - 2 * $button-border-width) / 2;
 
 input[type=submit],
@@ -92,7 +92,7 @@ a.button
   $sb-second-color   : false;
   $sb-border-radius  : $button-border-radius;
   $sb-border-width   : $button-border-width;
-  $sb-padding        : $button-vertical-padding $column-width;
+  $sb-padding        : $button-vertical-padding + 0.2rem $column-width $button-vertical-padding - 0.2rem ;
   $sb-font-size      : $secondary-text-size;
   $sb-line-height    : $button-line-height;
   $sb-text-color     : $button-text-color;
@@ -253,7 +253,7 @@ table.form
 
   ul.error-explanation
   {
-    margin: 0;
+    margin: $vertical-nudge;
     margin-left: $column-width;
     @include secondary-text;
     color: $error-feedback;
